tests/fail/tuple-lit/check.pion
//~ run = "${PION} elab ${FILE}"

{
let _ : (Int, Int, Int, Int) = (false, false, false);
let _ : (Int, Int, Int) = (false, false, false);
let _ : (Int, Int) = (false, false, false);

{}
}
